<resources>
    <string name="app_name">FeddApp</string>
    <string name="sign_in_cancelled">Sign In cancelled!</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="unknown_error">Unknow Error!</string>
    <string name="unknown_sign_in_response">Unknow Sign In Response</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong_while_getting_teams">
        Something went wrong while getting teams.</string>
    <string name="Members">Members</string>
    <string name="something_went_wrong_while_getting_team_members">
        Something went wrong while getting teams Members.</string>
    <string name="scores">Scores</string>
    <string name="requirements">Requirements</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="team_member_1">Team member # 1</string>
    <string name="team_member_2">Team member # 2</string>
    <string name="team_member_3">Team member # 3</string>
    <string name="team_member_4">Team member # 4</string>
    <string name="team_member_5">Team member # 5</string>
</resources>
