<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateTeamActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin_half"
                android:paddingTop="@dimen/activity_vertical_margin_half">

                <TextView
                    android:id="@+id/session_type_tv"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Session (Morning)" />

                <Switch
                    android:id="@+id/team_type_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <EditText
                android:id="@+id/team_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_team_name"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <EditText
                android:id="@+id/team_member_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_member_1"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <EditText
                android:id="@+id/team_member_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_member_2"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <EditText
                android:id="@+id/team_member_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_member_3"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <EditText
                android:id="@+id/team_member_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_member_4"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/activity_vertical_margin" />

            <EditText
                android:id="@+id/team_member_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_member_5"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/activity_vertical_margin" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>